<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F8F8F8"
    android:paddingTop="@dimen/list_item_oyuncu_constraintlayout_padding_top"
    android:paddingBottom="@dimen/list_item_oyuncu_constraintlayout_padding_bottom">

    <ImageView
        android:id="@+id/imgHoca"
        android:layout_width="@dimen/list_item_oyuncu_imgHoca_width"
        android:layout_height="@dimen/list_item_oyuncu_imgHoca_height"
        android:layout_marginStart="@dimen/list_item_oyuncu_imgHoca_marginstart"
        android:layout_marginTop="@dimen/list_item_oyuncu_imgHoca_margintop"
        android:layout_marginBottom="@dimen/list_item_oyuncu_imgHoca_marginbottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_item_oyuncu_textview_marginstart"
        android:layout_marginTop="@dimen/list_item_oyuncu_textview_margintop"
        android:text="@string/list_item_oyuncu_txtadisoyadi"
        app:layout_constraintStart_toEndOf="@+id/imgHoca"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtIsim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_oyuncu_textisim_margintop"
        android:text="@string/list_item_oyuncu_txtadisoyadiicerik"
        android:textColor="@color/list_item_oyuncu_txtisim"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_oyuncu_textview3_margintop"
        android:text="@string/list_item_oyuncu_txtmevki"
        app:layout_constraintStart_toStartOf="@+id/txtIsim"
        app:layout_constraintTop_toBottomOf="@+id/txtIsim" />

    <TextView
        android:id="@+id/txtMevki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_oyuncu_txtmevki_margintop"
        android:text="@string/list_item_oyuncu_txtmevkiicerik"
        android:textColor="@color/list_item_oyuncu_txtmevki"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_oyuncu_txtview5_margintop"
        android:text="@string/list_item_oyuncu_txtyas"
        app:layout_constraintStart_toStartOf="@+id/txtMevki"
        app:layout_constraintTop_toBottomOf="@+id/txtMevki" />

    <TextView
        android:id="@+id/txtYas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_oyuncu_txtyas_margintop"
        android:text="@string/list_item_oyuncu_txtyasicerik"
        android:textColor="@color/list_item_oyuncu_txtyas"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>